# SQLi_JavaCodeScan

./: README.md  pyproject.toml  requirements.txt
samples/safe/: Parameterized.java  SanitizedQuery.java
samples/vulnerable/: ClassicConcat.java  UnsafePrepared.java
src/sqliaudit/: __init__.py  cli.py  scanner.py
tests/: test_scanner.py
