[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sqliaudit"
version = "0.1.0"
description = "Lightweight SQL injection auditing tool for Java code"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Codex", email = "codex@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
sqliaudit = "sqliaudit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

